migrate to the official plugin for k8s (include a custom rule to restart pod if the volume has been modified)

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ itest.properties
 !overthere-plugin/src/test/resources/itest.properties
 */target/*
 xl-deploy-5.5.1-server/
+xl-deploy-7.5.0-server/
