--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ jdk:
 services:
   - docker
 
+before_script:
+  - cp .travis.settings.xml $HOME/.m2/settings.xml
+
 notifications:
   hipchat:
     rooms:
